--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,23 @@ body {
     margin: 2px;
 }
 
+@media only screen and (max-width: 768px){
+    body{
+        padding: 1px;
+        margin: 1px;
+  }
+}
+
+.myName {
+    margin: 2px; 
+    margin-right: 10px;
+    padding: 5px; 
+    font-size: 18px; 
+    font-weight: bolder;
+    position: relative;
+    top: 2px;
+}
+
 .about,
 .contact,
 .resume,
