--- a/src/style.css
+++ b/src/style.css
@@ -10,20 +10,25 @@ body {
 }
 
 .nav {
-    background-color: #D0DAEE;
+    background-color: #D2C5E1;
     margin-top: 0px;
     padding-top: 0px; 
     width: 100%; 
+}
+
+.nav-item {
+    padding-top: 2%;
 }
 
 .myName {
     margin: 2px; 
     margin-right: 10px;
     padding: 5px; 
-    font-size: 18px; 
+    padding-top: 2%;
+    font-size: 30px; 
     font-weight: bolder;
     position: relative;
-    top: 2px;
+    padding-top: 15px;
 }
 
 .about,
@@ -39,6 +44,7 @@ body {
 .portfolio {
     margin-right: 150px;
     margin-left: 150px;
+    margin-bottom: 100px;
 }
 
 .footer {
@@ -47,7 +53,7 @@ body {
     left:0;
     width:100%;
     height: 50px;
-    background-color: #D0DAEE;
+    background-color: #D2C5E1;
   }
   
   a.menu:hover {
@@ -72,8 +78,14 @@ body {
   .headshot {
     width: 30%;
     border-radius: 50%;
+    padding-bottom: 10px;
   }
 
   hr {
     width: 100%;
+    margin: 0px;
+  }
+
+  h1 {
+    padding-top: 35px;
   }
